hphp/hack/test/typecheck/fc_enum_7.php.rust_elab.exp
File "fc_enum_7.php", line 3, characters 6-8:
`HH\BuiltinEnum` is an implementation internal class that cannot be used directly (Naming[2053])
File "fc_enum_7.php", line 10, characters 14-16:
`Bar` is uninstantiable (Typing[4002])
  File "fc_enum_7.php", line 3, characters 6-8:
  Declaration is here
